<resources>
    <string name="app_name">Tweeter</string>

    <string name="homePageTitle">Home</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="loadingData">Loading More Data…</string>
    <string name="feedTabTitle">Feed</string>
    <string name="storyTabTitle">Story</string>
    <string name="followingTabTitle">Following</string>
    <string name="followersTabTitle">Followers</string>

    <string name="username_login">Username</string>
    <string name="password_login">Password</string>
    <string name="first_name_sign_up">First Name</string>
    <string name="last_name_sign_up">Last Name</string>
    <string name="email_sign_up">Email</string>
    <string name="male_button">Male</string>
    <string name="female_button">Female</string>

    <string name="sample_post">Message</string>

    <string name="sign_out">Sign Out</string>

    <string name="post">Post</string>
    <string name="post_prompt">Post a new Status:</string>
    <string name="post_hint">Write something here</string>


    <string name="follow_button">Follow</string>
    <string name="unfollow_button">Unfollow</string>



    <string name="sampleAlias">"@UserAlias"</string>
    <string name="sampleUserName">The User</string>
</resources>
